--- a/loafbread.html
+++ b/loafbread.html
@@ -88,28 +88,23 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups (250g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">3 cups flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon baking powder</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup beer, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">3/4 cup water, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">2 tsp salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">6 tablespoons unsalted butter, very cold (unsalted European butter is ideal, but not required)</label>
-                  <label class="form-check-label" for="unsalted"><i>*For best results, chill your butter in the freezer for 10-20 minutes before beginning this recipe. It's ideal that the butter is very cold for light, flaky, buttery biscuits.</i></label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup whole milk</label>
+                  <label class="form-check-label" for="unsalted">1/4 tsp yeast</label>
                 </div>
               </div>
             </div>
@@ -120,55 +115,19 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 425°F and line a cookie sheet with nonstick parchment paper. Set aside.
+                  Preheat your pot with the lid on at 450°F for 30 minutes.
                 </li>
                 <li>
                   <span>2</span>
-                  Combine flour, baking powder, sugar, and salt in a large bowl and mix well. Set aside.
+                  Combine beer, water, salt, and yeast in a mixing bowl, mix on medium low speed, then let sit for 3 minutes. Add flour gradually and mix on medium speed for 10 minutes until well combined.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
+                  Take out the pot and put the bread in. Cover with the lid and bake for 30 minutes.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove your butter from the refrigerator and either cut it into your flour mixture using a pastry cutter or (preferred) use a box grater to shred the butter into small pieces and then add to the flour mixture and stir.
-                </li>
-                <li>
-                  <span>5</span>
-                  Cut the butter or combine the grated butter until the mixture resembles coarse crumbs.
-                </li>
-                <li>
-                  <span>6</span>
-                  Add milk, use a wooden spoon or spatula to stir until combined (don't over-work the dough).
-                </li>
-                <li>
-                  <span>7</span>
-                  Transfer your biscuit dough to a well-floured surface and use your hands to gently work the dough together. If the dough is too sticky, add flour until it is manageable.
-                </li>
-                <li>
-                  <span>8</span>
-                  Once the dough is cohesive, fold in half over itself and use your hands to gently flatten layers together. Rotate the dough 90 degrees and fold in half again, repeating this step 5-6 times but taking care to not overwork the dough.
-                </li>
-                <li>
-                  <span>9</span>
-                  Use your hands (do not use a rolling pin) to flatten the dough to 1" thick and lightly dust a 2 ¾" round biscuit cutter with flour.
-                </li>
-                <li>
-                  <span>10</span>
-                  Making close cuts, press the biscuit cutter straight down into the dough and drop the biscuit onto your prepared baking sheet.
-                </li>
-                <li>
-                  <span>11</span>
-                  Repeat until you have gotten as many biscuits as possible and place less than 1/2" apart on baking sheet.
-                </li>
-                <li>
-                  <span>12</span>
-                  Once you have gotten as many biscuits as possible out of the dough, gently re-work the dough to get out another biscuit or two until you have at least 6 biscuits.
-                </li>
-                <li>
-                  <span>13</span>
-                  Bake for 12 minutes or until tops are beginning to just turn lightly golden brown. Serve warm.
+                  Take the lid off and bake the bread for an additional 10 minutes.
                 </li>
               </ul>
             </div>
