--- a/dinnerrolls.html
+++ b/dinnerrolls.html
@@ -155,7 +155,7 @@
                 </li>
                 <li>
                   <span>8</span>
-                  Adjust oven rack to a lower position and preheat oven to 350°F (177°C). (It’s best to bake the rolls towards the bottom of the oven so the tops don't burn.)
+                  Adjust oven rack to a lower position and preheat oven to 350°F (177°C). (It's best to bake the rolls towards the bottom of the oven so the tops don't burn.)
                 </li>
                 <li>
                   <span>9</span>
