--- a/loafbread.html
+++ b/loafbread.html
@@ -119,11 +119,11 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Combine beer, water, salt, and yeast in a mixing bowl, mix on medium low speed, then let sit for 3 minutes. Add flour gradually and mix on medium speed for 10 minutes until well combined.
+                  Combine beer, water, salt, and yeast in a mixing bowl, mix on medium low speed, then let sit for 3 minutes. Add flour gradually and mix on medium speed for 10 minutes until well combined and a dough forms.
                 </li>
                 <li>
                   <span>3</span>
-                  Take out the pot and put the bread in. Cover with the lid and bake for 30 minutes.
+                  Take the pot out of the oven after 30 minutes and put the dough inside. Cover the pot with the lid again and bake for 30 minutes.
                 </li>
                 <li>
                   <span>4</span>
