--- a/other.html
+++ b/other.html
@@ -32,7 +32,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/creampuffs" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/creampuffs.jpg" class="w-100" alt="Fudge Frosting">
+              <img src="assets/images/food/creampuffsother.jpg" class="w-100" alt="Cream Puffs">
             </a>
             <figcaption class="mt-2">
               <a href="/creampuffs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Cream Puffs</a>
