--- a/pumpkincookies.html
+++ b/pumpkincookies.html
@@ -138,6 +138,10 @@
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
                 </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">Pumpkin pie spice (optional, for topping)</label>
+                </div>
               </div>
             </div>
           </div>
