--- a/savory.html
+++ b/savory.html
@@ -39,6 +39,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/soup" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Lettuce Cups">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/soup" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chicken Noodle Soup</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
