--- a/soup.html
+++ b/soup.html
@@ -88,39 +88,27 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">2 small sweet potatoes, peeled and cubed in small equally sized pieces</label>
+                  <label class="form-check-label">1 sweet onion, peeled and cut in half</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3 tbsp avocado oil, divided</label>
+                  <label class="form-check-label">1/8 cup avocado oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">3/4 tsp salt, divided</label>
+                  <label class="form-check-label">6 large carrots, peeled</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1 1/2 cups chopped chicken breast</label>
+                  <label class="form-check-label">6 large parsnips, peeled</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/4 cup diced zucchini</label>
+                  <label class="form-check-label">1 package chicken drumsticks</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/4 cup teriyaki sauce</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1/8 tsp black pepper</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1 tsp cornstarch</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">1 head iceberg lettuce</label>
+                  <label class="form-check-label">1/2 tbsp salt</label>
                 </div>
               </div>
             </div>
@@ -131,23 +119,27 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 450°. Toss sweet potatoes with 1 tbsp oil and 1/2 tsp salt. Spread in a single layer on a baking sheet lined with parchment paper. Bake until crispy, about 20 minutes. Let cool.
+                  Heat oil in a large pot over medium heat. Place onion in the pot, flat sides down, until onion turns brown.
                 </li>
                 <li>
                   <span>2</span>
-                  Heat 1 tbsp oil in a medium nonstick skillet over medium high heat. Add chicken and cook, stirring occasionally, until lightly browned, about 3 minutes. Remove chicken from skillet.
+                  Add carrots and parsnips and roast together for approximately 5 minutes.
                 </li>
                 <li>
                   <span>3</span>
-                  Heat remaining 1 tbsp oil in skillet over medium high; add zucchini and cook, stirring often, until tender, about 3 minutes. Return chicken to skillet; add teriyaki sauce, pepper, and remaining 1/4 tsp salt, and stir to combine.
+                  Add chicken drumsticks and roast for another 5 minutes.
                 </li>
                 <li>
                   <span>4</span>
-                  Stir together cornstarch and 1 tbsp cold water until smooth. Add to chicken mixture; cook, stirring occasionally, until thickened, about 1 minute.
+                  Pour a considerable amount of water in a large bowl. Pour water from the bowl into the pot.
                 </li>
                 <li>
                   <span>5</span>
-                  Cut and remove core from bottom of lettuce and discard. Separate 4 to 6 large leaves and top with chicken mixture, then sprinkle with sweet potatoes.
+                  Add salt, put wooden spoon in the pot, cover loosely, and cook soup for 1 hour.
+                </li>
+                <li>
+                  <span>5</span>
+                  When soup finishes cooking, use a strainer to remove the chicken stock.
                 </li>
               </ul>
             </div>
