--- a/soup.html
+++ b/soup.html
@@ -96,11 +96,11 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">6 large carrots, peeled</label>
+                  <label class="form-check-label">6 large carrots, skinned</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
-                  <label class="form-check-label">6 large parsnips, peeled</label>
+                  <label class="form-check-label">6 large parsnips, skinned</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" class="form-check-input">
