--- a/savory.html
+++ b/savory.html
@@ -31,6 +31,16 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/fusilliallavodka" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/fusilliallavodka.png" class="w-100" alt="Fusilli Alla Vodka">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/fusilliallavodka" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fusilli Alla Vodka</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/lettucecups" class="tstbite-animation rounded-6">
               <img src="assets/images/food/lettucecups.jpg" class="w-100" alt="Lettuce Cups">
             </a>
