--- a/fusilliallavodka.html
+++ b/fusilliallavodka.html
@@ -132,7 +132,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">Salt, freshly ground pepper</label>
+                  <label class="form-check-label" for="unsalted">Pinch of salt and freshly ground pepper</label>
                 </div>
               </div>
             </div>
