--- a/soup.html
+++ b/soup.html
@@ -76,8 +76,8 @@
                 <span>1 hour 25 minutes minutes</span>
               </li>
               <li>
-                <small>Serving</small>
-                <span>3 bowls of soup
+                <small>Servings</small>
+                <span>3
                 </span>
               </li>
             </ul>
