--- a/bars.html
+++ b/bars.html
@@ -49,6 +49,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/brownies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/brownies.png" class="w-100" alt="Brownies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/brownies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Brownies</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
