--- a/bars.html
+++ b/bars.html
@@ -41,14 +41,26 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
             </a>
             <figcaption class="mt-2">
-              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/butterbars" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/brownies" class="tstbite-animation rounded-6">
@@ -60,6 +72,7 @@
           </figure>
         </div>
       </div>
+
     </section>
   </div>
 
