--- a/breads.html
+++ b/breads.html
@@ -71,6 +71,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/pumpkinbread" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pumpkinloaf.png" class="w-100" alt="Pumpkin Bread">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pumpkinbread" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Bread</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
