--- a/pumpkinbread.html
+++ b/pumpkinbread.html
@@ -51,7 +51,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>January 20th, 2023</small>
+          <small>January 23rd, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
@@ -65,19 +65,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>3 hours 25 minutes</span>
+                <span>20 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>22 minutes</span>
+                <span>65 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>3 hours 45 minutes</span>
+                <span>1 hour 30 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>6 large rolls, 14 small rolls
+                <span>2 loaves
                 </span>
               </li>
             </ul>
@@ -88,35 +88,47 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">3 cups (390g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">2 cups flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1  cup (240ml) whole milk, warmed to about 110°F (43°C)</label>
+                  <label class="form-check-label" for="unsalted">1/2 tsp salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
+                  <label class="form-check-label" for="unsalted">1 tsp baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbsp granulated sugar, divided</label>
+                  <label class="form-check-label" for="unsalted">1/2 tsp baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 large egg</label>
+                  <label class="form-check-label" for="unsalted">1 tsp ground cloves</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup (60g) unsalted butter, softened to room temperature and cut into 4 pieces</label>
+                  <label class="form-check-label" for="unsalted">1 tsp ground cinnamon</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tsp salt</label>
+                  <label class="form-check-label" for="unsalted">1 tsp ground nutmeg</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbsp melted unsalted butter (optional topping)</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 sticks (3/4 cup) unsalted butter, softened</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 cups sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 large eggs</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 (15oz) can 100% pure pumpkin</label>
                 </div>
               </div>
             </div>
@@ -127,43 +139,27 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  <b>Prepare the dough: </b>Whisk the warm milk, yeast, and 1 Tablespoon of sugar together in the bowl of your stand mixer. Cover and allow to sit for 5 minutes. *If you do not own a stand mixer, you can do this in a large mixing bowl and in the next step, mix the dough together with a large wooden spoon/rubber spatula. It will take a bit of arm muscle. A hand mixer works, but the sticky dough repeatedly gets stuck in the beaters. Mixing by hand with a wooden spoon or rubber spatula is a better choice.*
+                  Preheat the oven to 325°F and set an oven rack in the middle position. Generously grease two 8 x 4-inch loaf pans with butter and dust with flour.
                 </li>
                 <li>
                   <span>2</span>
-                  Add the remaining sugar, egg, butter, salt, and 1 cup flour. With a dough hook or paddle attachment, mix/beat on low speed for 30 seconds, scrape down the sides of the bowl with a rubber spatula, then add the remaining flour. Beat on medium speed until the dough comes together and pulls away from the sides of the bowl, about 2 minutes. If the dough seems too wet to a point where kneading (next step) would be impossible, beat in more flour 1 Tablespoon at a time until you have a workable dough, similar to the photos above. Dough should be soft and a little sticky, but still manageable to knead with lightly floured hands.
+                  In a medium bowl, combine the flour, salt, baking soda, baking powder, cloves, cinnamon, and nutmeg. Whisk until well combined. Set aside.
                 </li>
                 <li>
                   <span>3</span>
-                  <b>Knead the dough: </b>Keep the dough in the mixer and beat for an additional 3 full minutes or knead by hand on a lightly floured surface for 3 full minutes.
+                  In a large bowl of an electric mixer, beat the butter and sugar on medium speed until just blended. Add the eggs one at a time, beating well after each addition. Continue beating until very light and fluffy, a few minutes. Beat in the pumpkin. The mixture should look grainy and curdled at this point.
                 </li>
                 <li>
                   <span>4</span>
-                  <b>1st Rise: </b>Lightly grease a large bowl with oil or nonstick spray. Place the dough in the bowl, turning it to coat all sides in the oil. Cover the bowl with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the dough to rise in a relatively warm environment for 1-2 hours or until double in size.
+                  Add the flour mixture and mix on low speed until combined.
                 </li>
                 <li>
                   <span>5</span>
-                  Grease a glass 9x13-inch baking pan (rolls tend to brown a little too quickly in a metal pan). You can also bake the rolls in a cast iron skillet or on a lined baking sheet.*
+                  Turn the batter into the prepared pans, dividing evenly, and bake for 65 to 75 minutes, or until a cake tester inserted into the center comes out clean. Let the loaves cool in the pans for about 10 minutes, then turn out onto a wire rack to cool completely.
                 </li>
                 <li>
                   <span>6</span>
-                  <b>Shape the rolls: </b>bWhen the dough is ready, punch it down to release the air. Divide the dough into 14-16 equal pieces. (Just eyeball it- doesn't need to be perfect!) Shape each piece into a smooth ball. Arrange in prepared baking pan.
-                </li>
-                <li>
-                  <span>7</span>
-                  <b>2nd Rise: </b>Cover shaped rolls with aluminum foil, plastic wrap, or a clean kitchen towel. Allow to rise until puffy, about 1 hour.
-                </li>
-                <li>
-                  <span>8</span>
-                  Adjust oven rack to a lower position and preheat oven to 350°F (177°C). (It's best to bake the rolls towards the bottom of the oven so the tops don't burn.)
-                </li>
-                <li>
-                  <span>9</span>
-                  <b>Bake the rolls: </b>Bake for 20-25 minutes or until golden brown on top, rotating the pan halfway through. If you notice the tops browning too quickly, loosely tent the pan with aluminum foil. Remove from the oven, brush with optional honey butter topping, and allow rolls to cool for a few minutes before serving.
-                </li>
-                <li>
-                  <span>10</span>
-                  Cover leftover rolls tightly and store at room temperature for 2-3 days or in the refrigerator for up to 1 week.
+                  Fresh out of the oven,the loaves have a deliciously crisp crust. If they last beyond a day, you can toast individual slices to get the same fresh-baked effect.
                 </li>
               </ul>
             </div>
