--- a/bars.html
+++ b/bars.html
@@ -31,11 +31,11 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/butterbars" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/butterbars.jpg" class="w-100" alt="Butter Bars">
+            <a href="/baklava" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
             </a>
             <figcaption class="mt-2">
-              <a href="/butterbars" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Gooey Butter Bars</a>
+              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
             </figcaption>
           </figure>
         </div>
