--- a/pumpkinbread.html
+++ b/pumpkinbread.html
@@ -139,7 +139,7 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat the oven to 325°F and set an oven rack in the middle position. Generously grease two 8 x 4-inch loaf pans with butter and dust with flour.
+                  Preheat the oven to 325°F and set an oven rack in the middle position. Generously grease two 8 x 4-inch loaf pans with butter and dust with flour. Set aside.
                 </li>
                 <li>
                   <span>2</span>
