--- a/savory.html
+++ b/savory.html
@@ -51,6 +51,18 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/tofu" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/tofu.jpg" class="w-100" alt="Tofu">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/tofu" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Crispy Baked Tofu</a>
+            </figcaption>
+          </figure>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/soup" class="tstbite-animation rounded-6">
               <img src="assets/images/food/chickennoodlesoup.jpg" class="w-100" alt="Lettuce Cups">
             </a>
@@ -59,6 +71,7 @@
             </figcaption>
           </figure>
         </div>
+      </div>
       </div>
     </section>
   </div>
