--- a/brownies.html
+++ b/brownies.html
@@ -138,7 +138,7 @@
                 </li>
                 <li>
                   <span>4</span>
-                  Remove the brownies from the oven and let them cool completely
+                  Remove the brownies from the oven and let them cool completely.
                 </li>
               </ul>
             </div>
