--- a/tofu.html
+++ b/tofu.html
@@ -88,34 +88,22 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup unsweetened applesauce (substitute pumpkin puree, sweet potato puree, or mashed bananas)</label>
+                  <label class="form-check-label" for="crackers">1 block (12-15oz) organic extra-firm tofu</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2/3 cup almond butter</label>
+                  <label class="form-check-label" for="unsalted">1 tbsp extra-virgin olive oil</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup maple syrup</label>
+                  <label class="form-check-label" for="unsalted">1 tbsp tamari</label>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 tablespoons coconut sugar (substitute brown sugar)</label>
+                  <label class="form-check-label" for="crackers">1 tbsp cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup cocoa powder</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">White rice</label>
                 </div>
               </div>
             </div>
@@ -126,15 +114,15 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line an 8x8-inch pan with parchment paper. Set aside.
+                  Preheat oven to 400°F and line a large rimmed baking sheet with parchment paper to prevent the tofu from sticking. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  In a large mixing bowl, add the applesauce, almond butter, and maple syrup and whisk together until smooth. Add the coconut sugar, cocoa powder, baking soda, salt, and vanilla extract and mix until just combined.
+                  <b>To prepare the tofu: </b>Drain the tofu using your palm to gently squeeze out some of the water.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer the batter into the lined pan and bake for 30-35 minutes, or until a skewer comes out mostly clean.
+                  Line a cutting board with paper towels. Slice the tofu into thirds lengthwise so you have 3 even slabs. Stack the slabs on top of each other and slice through them lengthwise to make 3 even columns, then slice across to make 5 even rows.
                 </li>
                 <li>
                   <span>4</span>
