--- a/tofu.html
+++ b/tofu.html
@@ -126,7 +126,15 @@
                 </li>
                 <li>
                   <span>4</span>
-                  Remove the brownies from the oven and let them cool completely
+                  Arrange the tofu in an even layer on the paper towels. Add additional paper towels over the cubed tofu, then place something heavy on top (such as a small glass bowl) to help the tofu drain. Let the tofu rest for 30 minutes.
+                </li>
+                <li>
+                  <span>5</span>
+                  Transfer the pressed tofu to a medium mixing bowl and drizzle with the olive oil and tamari. Toss to combine. Sprinkle the starch over the tofu, and toss the tofu until the starch is evenly coated, so there are no powdery spots remaining.
+                </li>
+                <li>
+                  <span>5</span>
+                  Tip the bowl of tofu over onto your prepared baking sheet and arrange the tofu in an even layer. Bake for 25 to 30 minutes, turning the tofu over halfway, until the tofu is deeply golden on both sides. Serve with white rice.
                 </li>
               </ul>
             </div>
