--- a/tofu.html
+++ b/tofu.html
@@ -119,7 +119,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  <b>To prepare the tofu: </b>Drain the tofu using your palm to gently squeeze out some of the water.
+                  Drain the tofu using your palm to gently squeeze out some of the water.
                 </li>
                 <li>
                   <span>3</span>
