--- a/pancakes.html
+++ b/pancakes.html
@@ -88,34 +88,34 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup unsweetened applesauce (substitute pumpkin puree, sweet potato puree, or mashed bananas)</label>
+                  <label class="form-check-label" for="crackers">1 1/2 cups (195g) flour (spooned & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2/3 cup almond butter</label>
+                  <label class="form-check-label" for="unsalted">2 tbsp sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup maple syrup</label>
+                  <label class="form-check-label" for="unsalted">1 tbsp baking powder</label>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 tablespoons coconut sugar (substitute brown sugar)</label>
+                  <label class="form-check-label" for="crackers">1/4 tsp salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup cocoa powder</label>
+                  <label class="form-check-label" for="unsalted">1 1/4 cups (295mL) milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">1 large egg</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                  <label class="form-check-label" for="unsalted">4 tbsp unsalted butter, melted, plus more for skillet/pan</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 tsp vanilla extract</label>
                 </div>
               </div>
             </div>
@@ -126,19 +126,31 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line an 8x8-inch pan with parchment paper. Set aside.
+                  Whisk flour, sugar, baking powder, and the salt in a medium bowl.
                 </li>
                 <li>
                   <span>2</span>
-                  In a large mixing bowl, add the applesauce, almond butter, and maple syrup and whisk together until smooth. Add the coconut sugar, cocoa powder, baking soda, salt, and vanilla extract and mix until just combined.
+                  Warm milk in the microwave until lukewarm, not hot. You should be able to keep your finger submerged for 10 seconds.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer the batter into the lined pan and bake for 30-35 minutes, or until a skewer comes out mostly clean.
+                  Whisk milk, egg, melted butter, and vanilla extract until combined. (By warming the milk slightly, the melted butter mixes into the milk instead of turning into small lumps).
                 </li>
                 <li>
                   <span>4</span>
-                  Remove the brownies from the oven and let them cool completely.
+                  Heat a large skillet (or use griddle) over medium heat. The pan is ready if when you splatter a little water onto the pan surface, the water dances around the pan and eventually evaporates.
+                </li>
+                <li>
+                  <span>5</span>
+                  Make a well in the center of the flour mixture, pour milk mixture into the well and use a fork to stir until you no longer see clumps of flour. It is okay if the batter has small lumps - it is important not to over-mix the batter.
+                </li>
+                <li>
+                  <span>6</span>
+                  Lightly brush skillet with melted butter (this is optional if you have a high-quality non-stick pan). Use a 1/4-cup measuring cup to spoon batter onto the skillet. Gently spread the batter into a 4-inch circle.
+                </li>
+                <li>
+                  <span>7</span>
+                  When edges look dry, and bubbles start to appear and pop on the top surfaces of the pancake, turn over. This takes about 2 minutes. Once flipped, cook another 1 to 2 minutes or until lightly browned and cooked in the middle. Serve immediately with warm syrup, butter, or berries.
                 </li>
               </ul>
             </div>
