--- a/other.html
+++ b/other.html
@@ -41,6 +41,16 @@
         </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/pancakes" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pancakes</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/bostoncreamcupcakes" class="tstbite-animation rounded-6">
               <img src="assets/images/food/bostoncreamcupcakes.png" class="w-100" alt="Boston Cream Cupcakes">
             </a>
@@ -49,6 +59,8 @@
             </figcaption>
           </figure>
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/fudgefrosting" class="tstbite-animation rounded-6">
@@ -59,8 +71,6 @@
             </figcaption>
           </figure>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/creamcheesefrosting" class="tstbite-animation rounded-6">
