--- a/other.html
+++ b/other.html
@@ -45,7 +45,7 @@
               <img src="assets/images/food/pancakes.jpg" class="w-100" alt="Pancakes">
             </a>
             <figcaption class="mt-2">
-              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pancakes</a>
+              <a href="/pancakes" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Fluffy Pancakes</a>
             </figcaption>
           </figure>
         </div>
