--- a/pancakes.html
+++ b/pancakes.html
@@ -40,7 +40,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Pancakes</h5>
+          <h5 class="py-3 mb-0 h2">Fluffy Pancakes</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
