--- a/brownies.html
+++ b/brownies.html
@@ -97,6 +97,7 @@
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">1/3 cup maple syrup</label>
+                </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
                   <label class="form-check-label" for="crackers">2 tablespoons coconut sugar (substitute brown sugar)</label>
