--- a/cookies.html
+++ b/cookies.html
@@ -45,7 +45,7 @@
               <img src="assets/images/food/chocolatechipcookies.jpg" class="w-100" alt="Chocolate Chip Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Vanilla Pudding Chocolate Chip Cookies</a>
+              <a href="/chocolatechipcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pudding Chocolate Chip Cookies</a>
             </figcaption>
           </figure>
         </div>
