--- a/cookies.html
+++ b/cookies.html
@@ -60,6 +60,18 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/mnmcookies" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mandmcookies.jpg" class="w-100" alt="Mini M&M & Chocolate Chip Cookies">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/mnmcookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Soft-Batch Mini M&M & Chocolate Chip Cookies</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 
